--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" defer src="./main.js"></script>
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <div class="container">
+    <form class="search-form js-search-form">
+      <input
+        class="search-input"
+        type="text"
+        name="searchtext"
+        placeholder="Search images..."
+      />
+      <button class="search-button" type="submit">Search</button>
+    </form>
+  </div>
+  <div class="container">
+      <span class="js-loader"></span>
+      <ul class="gallery js-gallery"></ul>
+    </div>
   </body>
 </html>
